feat: add pagination

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -10,6 +10,7 @@
   <link rel="preload" href="../../assets/fonts/GeorgiaItalic.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="../../assets/fonts/ArialItalicMT.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="../../assets/fonts/ArialMT.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="icon" type="image/png" sizes="16x16"  href="../../assets/icons/shelter-icon.png">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
@@ -71,21 +72,21 @@
 
         <ul class="friends__list list-reset" id="friends__list">
 
-
         </ul>
 
+
         <div class="friends__wrap-pagination">
-          <button disabled data-disabled class="btn-reset friends__pagination btn-inactive">
+          <button class="btn-reset friends__pagination btn-inactive double-prev">
             <span class="friends__btns__left"></span>
           </button>
-          <button disabled data-disabled class="btn-reset friends__pagination btn-inactive">
+          <button class="btn-reset friends__pagination btn-inactive one-prev">
             <span class="friends__buttons__left"></span>
           </button>
-          <button class="btn-reset friends__btn-num btn-num-inactive btn-num-active">1</button>
-          <button class="btn-reset friends__pagination friends__pagination__next">
+          <button class="btn-reset friends__btn-num btn-num-inactive btn-num-active btn-num">1</button>
+          <button class="btn-reset friends__pagination friends__pagination__next one-next">
             <span class="friends__buttons__right"></span>
           </button>
-          <button class="btn-reset friends__pagination friends__pagination__next">
+          <button class="btn-reset friends__pagination friends__pagination__next double-next">
             <span class="friends__btns__right"></span>
           </button>
         </div>
