--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -10,6 +10,7 @@
   <link rel="preload" href="../../assets/fonts/GeorgiaItalic.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="../../assets/fonts/ArialItalicMT.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="../../assets/fonts/ArialMT.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="icon" type="image/png" sizes="16x16"  href="../../assets/icons/shelter-icon.png">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
